Fix: Add UI scrollbar variable fallbacks (#1566)
* add scrollbar variable fallbacks

* fix reversed values

--- a/static/variables/ui-variables.less
+++ b/static/variables/ui-variables.less
@@ -57,6 +57,9 @@
 @tree-view-background-color: @tool-panel-background-color;
 @tree-view-border-color: @tool-panel-border-color;
 
+@scrollbar-color: @background-color-highlight;
+@scrollbar-background-color: @app-background-color;
+
 @ui-site-color-1: @background-color-success; // green
 @ui-site-color-2: @background-color-info; // blue
 @ui-site-color-3: @background-color-warning; // orange
